unpackaged/main/default/objects/conference360__Email_Settings__c/conference360__Email_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for sending Emails</description>
    <label>Blackthorn | Email Settings</label>
</CustomObject>