unpackaged/main/default/objects/conference360__Email_Settings__c/fields/conference360__Custom_Email_Builder_UID_Handler__c.field-meta.xml
<CustomField>
    <fullName>conference360__Custom_Email_Builder_UID_Handler__c</fullName>
    <label>Custom Email Builder UID Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>