unpackaged/main/default/objects/conference360__Email_Settings__c/fields/conference360__Disable_HTML_Sanitizer__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_HTML_Sanitizer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable HTML Sanitizer</label>
    <type>Checkbox</type>
</CustomField>