unpackaged/main/default/objects/conference360__Email_Settings__c/fields/conference360__Enable_Sengrid__c.field-meta.xml
<CustomField>
    <fullName>conference360__Enable_Sengrid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Sendgrid</label>
    <type>Checkbox</type>
</CustomField>