unpackaged/main/default/objects/conference360__Email_Settings__c/fields/conference360__Mass_Email_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>conference360__Mass_Email_Batch_Size__c</fullName>
    <inlineHelpText>Set the size of the batch to send mass email. Cannot be greater than 50.</inlineHelpText>
    <label>Mass Email Batch Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>