unpackaged/main/default/objects/conference360__Email_Settings__c/fields/conference360__Reply_To_Email__c.field-meta.xml
<CustomField>
    <fullName>conference360__Reply_To_Email__c</fullName>
    <label>Sendgrid Reply To Email</label>
    <type>Email</type>
</CustomField>