unpackaged/main/default/objects/conference360__Email_Settings__c/fields/conference360__Sendgrid_API_key__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sendgrid_API_key__c</fullName>
    <label>Sendgrid API key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>